Começo removeProductFromCart
